|Ramu| Fix hindi text

--- a/views/modals/say-listen-language.ejs
+++ b/views/modals/say-listen-language.ejs
@@ -2,7 +2,7 @@
                         {value: "Bengali", id: "bn", text: "বাংলা"},
                         {value: "English", id: "en", text: "English"},
                         {value: "Gujarati", id: "gu", text: "ગુજરાતી"},
-                        {value: "Hindi", id: "hi", text: "हिन्दी"},
+                        {value: "Hindi", id: "hi", text: "हिंदी"},
                         {value: "Kannada", id: "kn", text: "ಕನ್ನಡ"},
                         {value: "Malayalam", id: "ml", text: "മലയാളം"},
                         {value: "Marathi", id: "mr", text: "मराठी"},
