|Ramu + Priyanshu| Updated Header logo, footer text

--- a/assets/css/record.css
+++ b/assets/css/record.css
@@ -397,3 +397,6 @@ audio {
   border-left: 0 solid transparent;
   border-right: 1.275em solid transparent;
 }
+.logo-text:hover {
+  text-decoration: none;
+}
