--- a/public/css/validator-prompt.css
+++ b/public/css/validator-prompt.css
@@ -1,1 +1,1 @@
-a{cursor:pointer}.dropdown{cursor:pointer}.w-h-5{width:5rem;height:5rem}@media (min-width:1000px){.dropdown-menu{right:0;left:auto}}.oflow-x-hid{overflow-x:hidden}
+a{cursor:pointer}.dropdown{cursor:pointer}.w-h-5{width:5rem;height:5rem}@media (min-width:1000px){.dropdown-menu{right:0;left:auto}}.oflow-x-hid{overflow-x:hidden}.logo-text:hover{text-decoration:none}
