--- a/views/validator-prompt-page.ejs
+++ b/views/validator-prompt-page.ejs
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-169921734-1"></script>
-    <script>function gtag() { dataLayer.push(arguments) } window.dataLayer = window.dataLayer || [], gtag("js", new Date), gtag("config", "UA-169921734-1")</script>
+    <script>function gtag(){dataLayer.push(arguments)}window.dataLayer=window.dataLayer||[],gtag("js",new Date),gtag("config","UA-169921734-1")</script>
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -23,7 +23,7 @@
                 <div id="content-wrapper" class="d-flex flex-column justify-content-between">
                     <div class="row justify-content-center" id="instructions-row">
                         <div id="instructions-link" class="d-flex justify-content-end align-items-center d-none"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#007BFF" style="cursor:pointer" class="bi bi-info-circle-fill d-none" viewBox="0 0 16 16">
-                                <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412l-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2z" />
+                                <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412l-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2z"/>
                             </svg> <span class="btn d-none" style="cursor:pointer">
                                 <%= __('Instructions') %>
                             </span></div>
@@ -70,16 +70,16 @@
                         </div>
                     </div>
                     <div class="row justify-content-center mb-lg-7 mb-md-7 mb-sm-1 mx-5" id="validation-button-row">
-                        <div class="col-lg-8 col-md-8 d-flex d-flex flex-row flex-wrap flex-lg-nowrap flex-md-nowrap justify-content-around mt-2"><button class="btn align-self-start" disabled="disabled" id="dislike_button"><svg width="208" height="66" viewBox="0 0 208 66" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M1 33C1 15.3269 15.3269 1 33 1H175C192.673 1 207 15.3269 207 33C207 50.6731 192.673 65 175 65H33C15.3269 65 1 50.6731 1 33Z" fill="white" stroke="#007BFF" stroke-width="2" />
-                                    <path d="M183.666 19.6666H178.333V35.6666H183.666V19.6666ZM154.333 34.3333C154.333 35.7999 155.533 36.9999 156.999 36.9999H165.413L164.146 43.0933L164.106 43.5199C164.106 44.0666 164.333 44.5733 164.693 44.9333L166.106 46.3333L174.879 37.5466C175.373 37.0666 175.666 36.3999 175.666 35.6666V22.3333C175.666 20.8666 174.466 19.6666 172.999 19.6666H160.999C159.893 19.6666 158.946 20.3333 158.546 21.2933L154.519 30.6933C154.399 30.9999 154.333 31.3199 154.333 31.6666V34.3333Z" fill="#007BFF" /><text x="26" y="43" font-family="lato" font-size="28" fill="#007BFF" style="text-align:center">
+                        <div class="col-lg-8 col-md-8 flex-lg-row flex-md-row flex-column-reverse d-flex d-flex flex-row flex-wrap flex-lg-nowrap flex-md-nowrap justify-content-around mt-2"><button class="w-100 btn align-self-start mb-2" disabled="disabled" id="dislike_button"><svg width="208" height="66" viewBox="0 0 208 66" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M1 33C1 15.3269 15.3269 1 33 1H175C192.673 1 207 15.3269 207 33C207 50.6731 192.673 65 175 65H33C15.3269 65 1 50.6731 1 33Z" fill="white" stroke="#007BFF" stroke-width="2"/>
+                                    <path d="M183.666 19.6666H178.333V35.6666H183.666V19.6666ZM154.333 34.3333C154.333 35.7999 155.533 36.9999 156.999 36.9999H165.413L164.146 43.0933L164.106 43.5199C164.106 44.0666 164.333 44.5733 164.693 44.9333L166.106 46.3333L174.879 37.5466C175.373 37.0666 175.666 36.3999 175.666 35.6666V22.3333C175.666 20.8666 174.466 19.6666 172.999 19.6666H160.999C159.893 19.6666 158.946 20.3333 158.546 21.2933L154.519 30.6933C154.399 30.9999 154.333 31.3199 154.333 31.6666V34.3333Z" fill="#007BFF"/><text x="26" y="43" font-family="lato" font-size="28" fill="#007BFF" style="text-align:center">
                                         <%= __('Incorrect') %>
                                     </text>
                                 </svg></button>
                             <div class="row justify-content-center mx-2" id="loader-play-btn">
                                 <div><span class="spinner w-h-5"></span></div>
                             </div>
-                            <div class="align-items-center justify-content-center align-items-center" id="audio-player-btn">
+                            <div class="align-items-center justify-content-center align-items-center mb-2" id="audio-player-btn">
                                 <div class="audioplayer d-flex justify-content-center align-items-center"><img src="./img/play.svg" alt="play" id="play" class="cursor-pointer"> <img src="./img/pause.svg" alt="pause" id="pause" class="d-none cursor-pointer"> <img src="./img/replay.svg" alt="replay" id="replay" class="d-none justify-self-center cursor-pointer"></div>
                                     <h3 class="font-wt-800 text-center mt-2" id="audioplayer-text_play">
                                         <%= __('Play') %>
@@ -90,16 +90,16 @@
                                     <h3 class="font-wt-800 text-center d-none mt-2" id="audioplayer-text_pause">
                                         <%= __('Pause') %>
                                     </h3>
-                            </div><button class="btn align-self-start" disabled="disabled" id="like_button"><svg width="208" height="66" viewBox="0 0 208 66" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <rect x="1" y="1" width="206" height="64" rx="32" fill="white" stroke="#007BFF" stroke-width="2" />
-                                    <path d="M24.334 46.3334H29.6673V30.3334H24.334V46.3334ZM53.6673 31.6667C53.6673 30.2001 52.4673 29.0001 51.0006 29.0001H42.5873L43.854 22.9067L43.894 22.4801C43.894 21.9334 43.6673 21.4267 43.3073 21.0667L41.894 19.6667L33.1207 28.4534C32.6273 28.9334 32.334 29.6001 32.334 30.3334V43.6667C32.334 45.1334 33.534 46.3334 35.0007 46.3334H47.0007C48.1073 46.3334 49.054 45.6667 49.454 44.7067L53.4806 35.3067C53.6007 35.0001 53.6673 34.6801 53.6673 34.3334V31.6667Z" fill="#007BFF" /><text x="86" y="43" font-family="lato" font-size="28" fill="#007BFF" style="text-align:center">
+                            </div><button class="btn align-self-start mb-2 w-100" disabled="disabled" id="like_button"><svg width="208" height="66" viewBox="0 0 208 66" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <rect x="1" y="1" width="206" height="64" rx="32" fill="white" stroke="#007BFF" stroke-width="2"/>
+                                    <path d="M24.334 46.3334H29.6673V30.3334H24.334V46.3334ZM53.6673 31.6667C53.6673 30.2001 52.4673 29.0001 51.0006 29.0001H42.5873L43.854 22.9067L43.894 22.4801C43.894 21.9334 43.6673 21.4267 43.3073 21.0667L41.894 19.6667L33.1207 28.4534C32.6273 28.9334 32.334 29.6001 32.334 30.3334V43.6667C32.334 45.1334 33.534 46.3334 35.0007 46.3334H47.0007C48.1073 46.3334 49.054 45.6667 49.454 44.7067L53.4806 35.3067C53.6007 35.0001 53.6673 34.6801 53.6673 34.3334V31.6667Z" fill="#007BFF"/><text x="86" y="43" font-family="lato" font-size="28" fill="#007BFF" style="text-align:center">
                                         <%= __('Correct') %>
                                     </text>
                                 </svg></button>
                         </div>
                     </div>
                 </div>
-                <div class="row justify-content-center" id="skip_btn_row"><button class="btn text-primary mt-2" id="skip_button">
+                <div class="row justify-content-center" id="skip_btn_row"><button class="btn text-primary mt-2 mb-2" id="skip_button">
                         <%= __('Skip') %>
                     </button></div>
                 <div class="row justify-content-center mb-3 mt-lg-5 mt-md-5 mt-sm-1" id="progress-row">
