|Ramu| Fix header in dashboard page and add common css

--- a/views/record.ejs
+++ b/views/record.ejs
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/notyf@3.7.0/notyf.min.css" integrity="sha256-1T9PQaTbbUusCVH72ahoGVZ1axGmU5uAOgSb4/GNXj8=" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/record.css">
+    <link rel="stylesheet" type="text/css" href="css/common.css">
 </head>
 <body> <%- include common/headerForContributor.ejs %>
 <div id="loader" class="overlay__content"><span class="spinner"></span></div>
