--- a/views/about-us.ejs
+++ b/views/about-us.ejs
@@ -1,5 +1,123 @@
-<!DOCTYPE html><html lang="en"><head><title>Vakyansh: A crowdsourcing initiative for Indic languages</title><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><script async src="https://www.googletagmanager.com/gtag/js?id=UA-169921734-1"></script><script>function gtag(){dataLayer.push(arguments)}window.dataLayer=window.dataLayer||[],gtag("js",new Date),gtag("config","UA-169921734-1")</script><link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap" rel="stylesheet" type="text/css"><link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"><link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"><link rel="stylesheet" type="text/css" href="css/home.css"></head><body> <%- include common/headerForContributor.ejs %> <div class="container-fluid"><div class="row pt-lg-5"><div class="col-12 col-md-7 col-lg-6 ml-lg-auto p-5 text-dark mt-4"><h1 class="display-5 font-wt-900 site-blue lh-5"> <%= __('Vakyansh: A crowdsourcing initiative for Indian languages')
-                %> </h1><p class="h5 font-weight-light-lg font-weight-normal-sm lh-7 site-blue text-justify mt-5"> <%= __('For the development of speech recognition models in Indian languages, there is a need for an open data repository of diversified Indian voices. Vakyansh invites you to reach out and contribute your voice to create a diverse open data repository of Indian voices.') %> </p><p class="h5 font-weight-light-lg font-weight-normal-sm lh-7 site-blue text-justify my-5"> <%= __('An open data strategy will enable the various language communities, individuals and technologists, who are passionate about their language, to develop speech recognition applications, and integrate them in various domains for the good of the community.')
-                %> </p><br><br></div><div class="col-12 col-md-5 col-lg-5 text-right px-0 align-self-center oflow-x-hid"><img src="/img/home.svg" class="img-fluid mr-n1"></div></div></div><div class="container-fluid bg-blue mt-n6 pb-6 pt-6"><div class="row justify-content-center text-white pt-5 pb-5"><div class="col-10 col-lg-4 text-left pr-4 pl-0 mb-2"><p class="h1 font-wt-900 lh-5"> <%= __('Our multilingual DNA is still a missing piece in digital first strategy') %> </p></div><div class="col-10 col-lg-3 text-left lh-7 pl-lg-3 pl-0 mb-2"><section class="lead font-weight-normal-sm"> <%= __('India being a vast multilingual country, 90% of India\’s population relies on regional languages to conduct their educational, social & digital activities.') %> </section></div><div class="col-10 col-lg-3 text-left lh-7 pl-lg-3 pl-0 mb-2"><section class="lead font-weight-normal-sm"> <%= __('As the volume of internet users multiplies and there is a demand to access digital platforms for financial, educational and economic activities, there is a need to start thinking Indian languages first.') %> </section></div></div></div><div class="container-fluid bg-light-blue mt-n5"><div class="row pb-6 pt-6 justify-content-center mt-5"><div class="col-10 col-lg-4 text-center p-5 align-self-center"><img src="img/about-us-1.svg" alt="Speaker Diversity" class="img-fluid"></div><div class="col-10 col-lg-6 text-left pb-5"><p class="h1 font-wt-900 lh-5"> <%= __('Winning back our languages by introducing localization in our ecosystem') %> </p><p class="lead lh-7 mt-5 font-weight-normal-sm"> <%= __('There is a felt need for a speech recognition technology that specializes in Indian languages, that meets a high accuracy bar and is closer to the daily language and communication functions of users of diverse Indian languages.') %> <br><br><%= __('Speech recognition is a technology that converts speech to real-time text. Such a model for Indian languages has the potential to become a building block to a digital first model, in various sectors, such as, education, healthcare and media.') %> <br><br><%= __('The tools, utilities and models proposed to be developed will rely on open source contributions through Vakyansh crowd sourcing platform.') %> </p></div></div></div><div class="container-fluid bg-light-blue mt-n5 supreme-container"><div class="row pb-6 justify-content-center mt-5"><div class="col-10 col-lg-4 text-center p-5 align-self-center"><img src="img/about-us-1.svg" alt="Speaker Diversity" class="img-fluid"></div><div class="col-10 col-lg-6 text-left pb-5"><p class="h1 font-wt-900 lh-5"> <%= __('Crowd Sourcing & your contribution') %> </p><p class="lead lh-7 mt-5 font-weight-normal-sm"> <%= __('Speech recognition relies on \"machine-learning\" technology that requires huge collections of datasets that include diversified Indian voices and the corresponding text. Through Vakyansh, EkStep wants to create a diverse open repository of Indian voice speaking Indian language which can be used for this initiative.') %> <br><br><%= __('This is where you come in.') %><br><br><%=
-                __('As a team, we are inviting you to join us and contribute upto 30 minutes of your voice to this initiative. Recording your voice at one stretch might be overwhelming and hence, we have created leaner measures on our website, for you to visit us multiple times and commence from where you left us off.') %> <br><br><%= __('Every minute of your contribution will make a huge difference and bring us closer to our objective.') %> </p><div class="row mt-4 ml-0 mr-0 justify-content-between" id="language-top-row"><select class="btn btn-outline-primary h6 w-100 rounded col-12 col-md-8 col-lg-6 mt-4 p-3" id="languageTop"><option disabled="disabled" selected="selected" class="pointer"> <%= __('Select language') %> </option> <% LANGUAGES.forEach(function(lang) { %> <option value="<%= lang.value %>"> <%= lang.text %></option> <% }) %> </select><div class="col-md-8 col-12 col-lg-5 pr-0"><button class="btn btn-primary h6 shadow w-100 rounded mt-4 p-3" disabled="disabled" id="start_recording" data-toggle="modal" data-target="#userModal"> <%= __('START RECORDING') %> </button></div></div></div></div></div><div class="container-fluid bg-blue"><div class="text-center text-white pt-5"> <%= __('ABOUT THE ORGANISATION') %> </div><p class="h1 font-wt-900 text-center text-white mt-3"> <%= __('EkStep Foundation') %></p><div class="row pb-6 justify-content-center text-white"><div class="col-10 col-lg-6 mb-3 text-left lh-7 py-5 lead font-weight-normal-sm"> <%= __('EkStep Foundation gathers partners and creates open infrastructure, tools and frameworks to solve complex societal problems at scale. We do this by leveraging the open source digital infrastructure we have created called Sunbird and by following a way of thinking and doing called the Societal Platform Approach.') %> <br><br><%=
-            __('EkStep is a not-for-profit organization founded by Rohini and Nandan Nilekani and Shankar Maruwada.') %> <p></p></div></div></div> <%- include common/footer.ejs %> <%- include modals/speakerDetail.ejs %> <script>document.body.querySelector("footer").classList.remove("fixed-bottom")</script><script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script><script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script><script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script><script src="js/about-us.js"></script></body></html>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <title>Vakyansh: A crowdsourcing initiative for Indic languages</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-169921734-1"></script>
+    <script>function gtag(){dataLayer.push(arguments)}window.dataLayer=window.dataLayer||[],gtag("js",new Date),gtag("config","UA-169921734-1")</script>
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="css/home.css">
+    <link rel="stylesheet" type="text/css" href="css/common.css">
+</head>
+
+<body>
+    <%- include common/headerForContributor.ejs %>
+        <div class="container-fluid">
+            <div class="row pt-lg-5">
+                <div class="col-12 col-md-7 col-lg-6 ml-lg-auto p-5 text-dark mt-4">
+                    <h1 class="display-5 font-wt-900 site-blue lh-5">
+                        <%= __('Vakyansh: A crowdsourcing initiative for Indian languages') %>
+                    </h1>
+                    <p class="h5 font-weight-light-lg font-weight-normal-sm lh-7 site-blue text-justify mt-5">
+                        <%= __('For the development of speech recognition models in Indian languages, there is a need for an open data repository of diversified Indian voices. Vakyansh invites you to reach out and contribute your voice to create a diverse open data repository of Indian voices.') %>
+                    </p>
+                    <p class="h5 font-weight-light-lg font-weight-normal-sm lh-7 site-blue text-justify my-5">
+                        <%= __('An open data strategy will enable the various language communities, individuals and technologists, who are passionate about their language, to develop speech recognition applications, and integrate them in various domains for the good of the community.') %>
+                    </p><br><br>
+                </div>
+                <div class="col-12 col-md-5 col-lg-5 text-right px-0 align-self-center oflow-x-hid"><img src="/img/home.svg" class="img-fluid mr-n1"></div>
+            </div>
+        </div>
+        <div class="container-fluid bg-blue mt-n6 pb-6 pt-6">
+            <div class="row justify-content-center text-white pt-5 pb-5">
+                <div class="col-10 col-lg-4 text-left pr-4 pl-0 mb-2">
+                    <p class="h1 font-wt-900 lh-5">
+                        <%= __('Our multilingual DNA is still a missing piece in digital first strategy') %>
+                    </p>
+                </div>
+                <div class="col-10 col-lg-3 text-left lh-7 pl-lg-3 pl-0 mb-2">
+                    <section class="lead font-weight-normal-sm">
+                        <%= __('India being a vast multilingual country, 90% of India\’s population relies on regional languages to conduct their educational, social & digital activities.') %>
+                    </section>
+                </div>
+                <div class="col-10 col-lg-3 text-left lh-7 pl-lg-3 pl-0 mb-2">
+                    <section class="lead font-weight-normal-sm">
+                        <%= __('As the volume of internet users multiplies and there is a demand to access digital platforms for financial, educational and economic activities, there is a need to start thinking Indian languages first.') %>
+                    </section>
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid bg-light-blue mt-n5">
+            <div class="row pb-6 pt-6 justify-content-center mt-5">
+                <div class="col-10 col-lg-4 text-center p-5 align-self-center"><img src="img/about-us-1.svg" alt="Speaker Diversity" class="img-fluid"></div>
+                <div class="col-10 col-lg-6 text-left pb-5">
+                    <p class="h1 font-wt-900 lh-5">
+                        <%= __('Winning back our languages by introducing localization in our ecosystem') %>
+                    </p>
+                    <p class="lead lh-7 mt-5 font-weight-normal-sm">
+                        <%= __('There is a felt need for a speech recognition technology that specializes in Indian languages, that meets a high accuracy bar and is closer to the daily language and communication functions of users of diverse Indian languages.') %> <br><br>
+                            <%= __('Speech recognition is a technology that converts speech to real-time text. Such a model for Indian languages has the potential to become a building block to a digital first model, in various sectors, such as, education, healthcare and media.') %> <br><br>
+                                <%= __('The tools, utilities and models proposed to be developed will rely on open source contributions through Vakyansh crowd sourcing platform.') %>
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid bg-light-blue mt-n5 supreme-container">
+            <div class="row pb-6 justify-content-center mt-5">
+                <div class="col-10 col-lg-4 text-center p-5 align-self-center"><img src="img/about-us-1.svg" alt="Speaker Diversity" class="img-fluid"></div>
+                <div class="col-10 col-lg-6 text-left pb-5">
+                    <p class="h1 font-wt-900 lh-5">
+                        <%= __('Crowd Sourcing & your contribution') %>
+                    </p>
+                    <p class="lead lh-7 mt-5 font-weight-normal-sm">
+                        <%= __('Speech recognition relies on \"machine-learning\" technology that requires huge collections of datasets that include diversified Indian voices and the corresponding text. Through Vakyansh, EkStep wants to create a diverse open repository of Indian voice speaking Indian language which can be used for this initiative.') %> <br><br>
+                            <%= __('This is where you come in.') %><br><br>
+                                <%= __('As a team, we are inviting you to join us and contribute upto 30 minutes of your voice to this initiative. Recording your voice at one stretch might be overwhelming and hence, we have created leaner measures on our website, for you to visit us multiple times and commence from where you left us off.') %> <br><br>
+                                    <%= __('Every minute of your contribution will make a huge difference and bring us closer to our objective.') %>
+                    </p>
+                    <div class="row mt-4 ml-0 mr-0 justify-content-between" id="language-top-row"><select class="btn btn-outline-primary h6 w-100 rounded col-12 col-md-8 col-lg-6 mt-4 p-3" id="languageTop">
+                            <option disabled="disabled" selected="selected" class="pointer">
+                                <%= __('Select language') %>
+                            </option>
+                            <% LANGUAGES.forEach(function(lang) { %>
+                                <option value="<%= lang.value %>">
+                                    <%= lang.text %>
+                                </option>
+                                <% }) %>
+                        </select>
+                        <div class="col-md-8 col-12 col-lg-5 pr-0"><button class="btn btn-primary h6 shadow w-100 rounded mt-4 p-3" disabled="disabled" id="start_recording" data-toggle="modal" data-target="#userModal">
+                                <%= __('START RECORDING') %>
+                            </button></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid bg-blue">
+            <div class="text-center text-white pt-5">
+                <%= __('ABOUT THE ORGANISATION') %>
+            </div>
+            <p class="h1 font-wt-900 text-center text-white mt-3">
+                <%= __('EkStep Foundation') %>
+            </p>
+            <div class="row pb-6 justify-content-center text-white">
+                <div class="col-10 col-lg-6 mb-3 text-left lh-7 py-5 lead font-weight-normal-sm">
+                    <%= __('EkStep Foundation gathers partners and creates open infrastructure, tools and frameworks to solve complex societal problems at scale. We do this by leveraging the open source digital infrastructure we have created called Sunbird and by following a way of thinking and doing called the Societal Platform Approach.') %> <br><br>
+                        <%= __('EkStep is a not-for-profit organization founded by Rohini and Nandan Nilekani and Shankar Maruwada.') %>
+                            <p></p>
+                </div>
+            </div>
+        </div>
+        <%- include common/footer.ejs %>
+            <%- include modals/speakerDetail.ejs %>
+                <script>document.body.querySelector("footer").classList.remove("fixed-bottom")</script>
+                <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+                <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+                <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+                <script src="js/about-us.js"></script>
+</body>
+
+</html>
