--- a/views/modals/content-languages.ejs
+++ b/views/modals/content-languages.ejs
@@ -1,1 +1,11 @@
-<div class="modal fade" id="content-language" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true" data-backdrop="static" data-keyboard="false"><div class="modal-dialog modal-lg modal-dialog-centered" role="document"><div class="modal-content p-4 border-primary border-2"><div class="modal-header d-block border-0"><h6 class="modal-title text-center"> <%= __('Select Your Preferred Language') %> </h6></div><div class="modal-body"><div class="row justify-content-center d-flex flex-row-wrap text-primary cursor-pointer"><a id="bengali" class="p-2" href="/changeLocale/bn">বাংলা</a><a id="hindi" class="p-2" href="/changeLocale/hi">हिंदी</a> <a id="kannada" class="p-2" href="/changeLocale/kn">ಕನ್ನಡ</a> <a id="malayalam" class="p-2" href="/changeLocale/ml">മലയാളം</a><a id="english" class="p-2" href="/changeLocale/en">English</a><a id="gujarati" class="p-2" href="/changeLocale/gu">ગુજરાતી</a><a id="marathi" class="p-2" href="/changeLocale/mr">मराठी</a><a id="odia" class="p-2" href="/changeLocale/or">ଘୃଣା</a><a id="punjabi" class="p-2" href="/changeLocale/pa">ਪੰਜਾਬੀ</a><a id="assamese" class="p-2" href="/changeLocale/as">অসমীয়া</a></div></div></div></div></div>
+<div class="modal fade" id="content-language" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true" data-backdrop="static" data-keyboard="false">
+    <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
+        <div class="modal-content p-4 border-primary border-2">
+            <div class="modal-header d-block border-0"><h6 class="modal-title text-center"> <%= __('Select Your Preferred Language') %> </h6></div>
+            <div class="modal-body">
+                <div class="row justify-content-center d-flex flex-row-wrap text-primary cursor-pointer"><a id="bengali" class="p-2" href="/changeLocale/bn">বাংলা</a><a id="hindi" class="p-2" href="/changeLocale/hi">हिंदी</a> <a id="kannada" class="p-2" href="/changeLocale/kn">ಕನ್ನಡ</a>
+                    <a id="malayalam" class="p-2" href="/changeLocale/ml">മലയാളം</a><a id="english" class="p-2" href="/changeLocale/en">English</a><a id="gujarati" class="p-2" href="/changeLocale/gu">ગુજરાતી</a><a id="marathi" class="p-2" href="/changeLocale/mr">मराठी</a><a id="odia" class="p-2" href="/changeLocale/or">ଓଡିଆ</a><a id="punjabi" class="p-2" href="/changeLocale/pa">ਪੰਜਾਬੀ</a><a id="assamese" class="p-2" href="/changeLocale/as">অসমীয়া</a></div>
+            </div>
+        </div>
+    </div>
+</div>
