--- a/views/modals/say-listen-language.ejs
+++ b/views/modals/say-listen-language.ejs
@@ -6,7 +6,7 @@
                         {value: "Kannada", id: "kn", text: "ಕನ್ನಡ"},
                         {value: "Malayalam", id: "ml", text: "മലയാളം"},
                         {value: "Marathi", id: "mr", text: "मराठी"},
-                        {value: "Odia", id: "or", text: "ଘୃଣା"},
+                        {value: "Odia", id: "or", text: "ଓଡିଆ"},
                         {value: "Punjabi", id: "pa", text: "ਪੰਜਾਬੀ"},
                         {value: "Tamil", id: "ta", text: "தமிழ்"},
                         {value: "Telugu", id: "te", text: "తెలుగు"}].forEach(e=>{ %> <div class="p-2 options" aria-hidden="true" data-dismiss="modal" aria-label="Close" value="<%= e.value %>" id="<%= e.id %>"><%= e.text %></div> <% }) %> </div></div><div class="margin-left-auto"><button class="close float-right" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times</span></button></div></div></div></div>
