|Priyanshu + Sreejith| removed english from contribution language

--- a/views/modals/say-listen-language.ejs
+++ b/views/modals/say-listen-language.ejs
@@ -1,6 +1,6 @@
 <div class="modal fade" id="language-pop-up-wrapper" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true"><div class="modal-dialog modal-lg modal-dialog-centered" role="document"><div class="modal-content p-4 border-primary border-2"><div class="modal-header d-block border-0"><h6 class="modal-title text-center text-muted"><%= __('Select the language for contribution') %>:</h6></div><div class="modal-body"><div class="row justify-content-center d-flex flex-row-wrap text-primary cursor-pointer" id="say-listen-language"> <% [{value: "Assamese", id: "as", text: "অসমীয়া"},
                         {value: "Bengali", id: "bn", text: "বাংলা"},
-                        {value: "English", id: "en", text: "English"},
+                        // {value: "English", id: "en", text: "English"},
                         {value: "Gujarati", id: "gu", text: "ગુજરાતી"},
                         {value: "Hindi", id: "hi", text: "हिंदी"},
                         {value: "Kannada", id: "kn", text: "ಕನ್ನಡ"},
