--- a/views/modals/say-listen-language.ejs
+++ b/views/modals/say-listen-language.ejs
@@ -4,7 +4,7 @@
             <div class="margin-left-auto">
                 <button class="close float-right" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times</span>
                 </button>
-            </div>g
+            </div>
             <div class="modal-header d-block border-0"><h6 class="modal-title text-center text-muted"><%= __('Select the language for contribution') %>
                     :</h6>
 
