--- a/views/thank-you.ejs
+++ b/views/thank-you.ejs
@@ -35,9 +35,7 @@
             </div>
             <div class="row justify-content-center mt-5">
                 <div class="col-xl-6 col-lg-8 col-11 text-center">
-                    <p class="lead">
-                        <%- __('Your contribution has got us <b><span id="user-contribution">0 seconds</span></b> closer to our goal!!!') %>
-                    </p>
+                    <p class="lead"><%- __('You have contributed <b><span id="user-contribution"></span></b><b><span> recordings</span></b> of your voice')%></p>
                 </div>
             </div>
             <div class="row justify-content-center mt-5">
