--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -133,11 +133,11 @@
                         <div class="col-12 col-lg-6 text-center d-flex justify-content-center align-items-center loader chart-spinner"><span class="spinner"></span></div>
                     </div>
                     <div class="row justify-content-center chart-container">
-                        <div class="col-12 col-lg-5 mb-3 text-center chart text-dark p-4">
-                            <div class="text-left px-3 pb-3">
+                        <div class="col-12 col-lg-5 mb-3 text-center chart state-chart text-dark p-4">
+                            <div class="text-left px-3 pb-3 state-chart-text">
                                 <%= __('State Wise distribution') %>
                             </div>
-                            <div id="indiaMapChart" style="width:100%;height:500px"></div>
+                            <div id="indiaMapChart" style="width:100%"></div>
                             <div id="legendDiv" class="justify-content-evenly mb-5 d-none">
                                 <div id="quarter" class="quarter">
                                     <div class="legend-val">0 - 1hr</div>
