|Priyanshu| extract speaker related method in speakerDetail.js

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -29,7 +29,13 @@
                             <div class="col-5 col-lg-5 col-xl-4" id="nav-bar-loader">
                                 <div><span class="spinner"></span></div>
                             </div>
-                            <ul class="navbar-nav text-primary cursor-pointer d-none" id="language-nav-bar"></ul>
+                            <ul class="navbar-nav text-primary cursor-pointer d-none" id="language-nav-bar">
+                                <li class="nav-item px-lg-4 px-md-4 px-2 options" value="Hindi">हिंदी</li>
+                                <li class="nav-item px-lg-4 px-md-4 px-2 options" value="Marathi">मराठी</li>
+                                <li class="nav-item px-lg-4 px-md-4 px-2 options" value="Bengali">বাংলা</li>
+                                <li class="nav-item px-lg-4 px-md-4 px-2 options" value="Tamil">தமிழ்</li>
+                                <li class="nav-item px-lg-4 px-md-4 px-2 options" value="Telugu">తెలుగు</li>
+                            </ul>
                             <ul class="navbar-nav text-primary cursor-pointer">
                                 <li class="nav-item mx-2 mx-lg-4 options d-none" id="6th_option"></li>
                             </ul>
