--- a/views/record.ejs
+++ b/views/record.ejs
@@ -19,7 +19,7 @@
     <div id="content-wrapper" class="container-fluid d-flex flex-column justify-content-around pt-1 pb-1">
         <div>
             <div class="row justify-content-center my-5">
-                <div class="col-md-8 col-sm-10 text-center"><label class="h1 font-weight-normal" id="sentenceLbl"></label></div>
+                <div class="col-md-8 col-sm-10 text-center prompt"><label class="h1 font-weight-normal" id="sentenceLbl"></label></div>
             </div>
             <div class="row mt-5">
                 <div class="col-7 col-sm-8 offset-2">
@@ -29,45 +29,44 @@
                 </div>
                 <div class="col-3 col-sm-2"><span class="" id="currentSentenceLbl"></span> <span class="">/</span> <span class="" id="totalSentencesLbl"></span></div>
             </div>
-            <div class="row justify-content-center d-none">
-                <div class="col-8 text-muted h-1r" id="get-started"> <%= __('Let\'s get started!') %> </div>
+            <div>
+                <div class="row justify-content-center d-none">
+                    <div class="col-8 text-muted h-1r" id="get-started"> <%= __('Let\'s get started!') %> </div>
+                </div>
+
+                <div class="row justify-content-center d-none" id="recording-row">
+                    <div class="col-md-1 col-2 my-5">
+                        <div id="recording-sign" class="recorder-container ml-auto align-middle d-none">
+                            <div class="outer"></div>
+                            <div class="outer-2"></div>
+                            <div class="icon-microphone"><i class="material-icons md-48">mic</i></div>
+                        </div>
+                    </div>
+                    <div class="col-lg-5 col-8 text-center">
+                        <canvas id="visualizer"></canvas>
+                    </div>
+                </div>
+                <div class="row justify-content-center d-none count-down" id="count-down"><span class="align-middle" id="cont-down-span"> <%- __('Recording will automatically stop after <span id="counter"></span> seconds') %> </span>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-lg-4 col-md-6 col-sm-8 col-12 text-center my-5">
+                        <audio class="d-none" id="player" controls tabindex="-1"></audio>
+                        <div class="text-danger mt-2 d-none" id="audio-small-error"><i class="material-icons align-middle">error</i>
+                            <span class="align-middle"> <%= __('Audio recording is too small. Please Re-record') %> </span>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="row justify-content-center align-items-center mt-5" id="startRecordRow">
                 <div class="col-xl-2 col-md-3 col-sm-4 col-6">
                     <button type="button" class="btn btn-primary shadow h6 w-100 rounded mt-4 p-3" id="startRecord"> <%= __('START RECORDING') %> </button>
+                    <button type="button" id="stopRecord" class="d-none btn btn-primary shadow h6 w-100 rounded mt-4 p-3"> <%= __('STOP RECORDING') %> </button>
                 </div>
                 <div class="col-xl-2 col-md-3 col-sm-4 col-6">
                     <button type="button" tabindex="-1" id="skipBtn" class="btn btn-outline-primary h6 w-100 rounded mt-4 p-3"> <%= __('SKIP') %> </button>
                 </div>
             </div>
-            <div class="row justify-content-center my-5 d-none" id="recording-row">
-                <div class="col-md-1 col-2 my-auto">
-                    <div id="recording-sign" class="recorder-container ml-auto align-middle d-none">
-                        <div class="outer"></div>
-                        <div class="outer-2"></div>
-                        <div class="icon-microphone"><i class="material-icons md-48">mic</i></div>
-                    </div>
-                </div>
-                <div class="col-lg-5 col-8 text-center">
-                    <canvas id="visualizer"></canvas>
-                </div>
-            </div>
-            <div class="row justify-content-center d-none count-down" id="count-down"><span class="align-middle" id="cont-down-span"> <%- __('Recording will automatically stop after <span id="counter"></span> seconds') %> </span>
-            </div>
-            <div class="row justify-content-center mt-5">
-                <div class="col-lg-2 col-md-4 col-6">
-                    <button type="button" id="stopRecord" class="d-none btn btn-primary shadow h6 w-100 rounded mt-4 p-3"> <%= __('STOP RECORDING') %> </button>
-                </div>
-            </div>
-            <div class="row justify-content-center">
-                <div class="col-lg-4 col-md-6 col-sm-8 col-12 text-center">
-                    <audio class="d-none" id="player" controls tabindex="-1"></audio>
-                    <div class="text-danger mt-2 d-none" id="audio-small-error"><i class="material-icons align-middle">error</i>
-                        <span class="align-middle"> <%= __('Audio recording is too small. Please Re-record') %> </span>
-                    </div>
-                </div>
-            </div>
-            <div class="row justify-content-center mt-5 mb-2">
+            <div class="row justify-content-center align-items-center mt-5">
                 <div class="col-lg-2 col-md-3 col-sm-4 col-6">
                     <button type="button" id="reRecord" class="d-none btn btn-outline-primary h6 w-100 rounded mt-4 p-3"> <%= __('RE-RECORD') %> </button>
                 </div>
