--- a/views/record.ejs
+++ b/views/record.ejs
@@ -16,7 +16,7 @@
 <body> <%- include common/headerForContributor.ejs %>
 <div id="loader" class="overlay__content"><span class="spinner"></span></div>
 <div id="page-content" class="d-none">
-    <div id="content-wrapper" class="container-fluid d-flex flex-column justify-content-around pt-1 pb-1">
+    <div id="content-wrapper" class="container-fluid d-flex flex-column pt-1 pb-1">
         <div>
             <div class="row justify-content-center my-5">
                 <div class="col-md-8 col-sm-10 text-center prompt"><label class="h1 font-weight-normal" id="sentenceLbl"></label></div>
@@ -29,13 +29,13 @@
                 </div>
                 <div class="col-3 col-sm-2"><span class="" id="currentSentenceLbl"></span> <span class="">/</span> <span class="" id="totalSentencesLbl"></span></div>
             </div>
-            <div>
+            <div class="recording-container">
                 <div class="row justify-content-center d-none">
                     <div class="col-8 text-muted h-1r" id="get-started"> <%= __('Let\'s get started!') %> </div>
                 </div>
 
                 <div class="row justify-content-center d-none" id="recording-row">
-                    <div class="col-md-1 col-2 my-5">
+                    <div class="col-md-1 col-2 my-auto">
                         <div id="recording-sign" class="recorder-container ml-auto align-middle d-none">
                             <div class="outer"></div>
                             <div class="outer-2"></div>
@@ -57,22 +57,22 @@
                     </div>
                 </div>
             </div>
-            <div class="row justify-content-center align-items-center mt-5" id="startRecordRow">
+            <div class="row justify-content-center align-items-center" id="startRecordRow">
                 <div class="col-xl-2 col-md-3 col-sm-4 col-6">
-                    <button type="button" class="btn btn-primary shadow h6 w-100 rounded mt-4 p-3" id="startRecord"> <%= __('START RECORDING') %> </button>
-                    <button type="button" id="stopRecord" class="d-none btn btn-primary shadow h6 w-100 rounded mt-4 p-3"> <%= __('STOP RECORDING') %> </button>
+                    <button type="button" class="btn btn-primary shadow h6 w-100 rounded p-3" id="startRecord"> <%= __('START RECORDING') %> </button>
+                    <button type="button" id="stopRecord" class="d-none btn btn-primary shadow h6 w-100 rounded p-3"> <%= __('STOP RECORDING') %> </button>
                 </div>
                 <div class="col-xl-2 col-md-3 col-sm-4 col-6">
-                    <button type="button" tabindex="-1" id="skipBtn" class="btn btn-outline-primary h6 w-100 rounded mt-4 p-3"> <%= __('SKIP') %> </button>
+                    <button type="button" tabindex="-1" id="skipBtn" class="btn btn-outline-primary h6 w-100 rounded p-3"> <%= __('SKIP') %> </button>
                 </div>
             </div>
-            <div class="row justify-content-center align-items-center mt-5">
-                <div class="col-lg-2 col-md-3 col-sm-4 col-6">
-                    <button type="button" id="reRecord" class="d-none btn btn-outline-primary h6 w-100 rounded mt-4 p-3"> <%= __('RE-RECORD') %> </button>
+            <div class="row justify-content-center align-items-center">
+                <div class="col-xl-2 col-md-3 col-sm-4 col-6">
+                    <button type="button" id="reRecord" class="d-none btn btn-outline-primary h6 w-100 rounded p-3"> <%= __('RE-RECORD') %> </button>
                 </div>
-                <div class="col-lg-2 col-md-3 col-sm-4 col-6">
+                <div class="col-xl-2 col-md-3 col-sm-4 col-6">
                     <div class="outline-0" tabindex="0" data-toggle="tooltip" title="Please validate any error message before proceeding">
-                        <button id="nextBtn" class="d-none btn btn-primary shadow h6 w-100 rounded mt-4 p-3 point-none"> <%= __('NEXT') %> </button>
+                        <button id="nextBtn" class="d-none btn btn-primary shadow h6 w-100 rounded p-3 point-none"> <%= __('NEXT') %> </button>
                     </div>
                 </div>
             </div>
