| Niresh + Raunak | age group initial changes

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -243,15 +243,10 @@
                                 <option selected="selected" value="">
                                     <%= __('Select Age Group') %>
                                 </option>
-                                <option value="00 - 13">00 - 12 (Kid)</option>
-                                <option value="13 - 17">13 - 17 (Youth)</option>
-                                <option value="18 - 29">18 - 29 (Adult)</option>
-                                <option value="30 - 39">30 - 39 (Adult)</option>
-                                <option value="40 - 49">40 - 49 (Adult)</option>
-                                <option value="50 - 59">50 - 59 (Adult)</option>
-                                <option value="60 - 64">60 - 64 (Adult)</option>
-                                <option value="65 - 74">65 - 74 (Senior)</option>
-                                <option value="> 75">&gt; 75 (Senior)</option>
+                                <option value="upto 10">upto 10 (Kid)</option>
+                                <option value="10 - 30">10 - 30 (Youth)</option>
+                                <option value="30 - 60">30 - 60 (Adult)</option>
+                                <option value="60+">60+ (Senior)</option>
                             </select></div>
                         <div class="form-group"><label for="gender" class="form-label">
                                 <%= __('Gender') %>
