|Priyanshu| update about us content for punjabi

--- a/views/validator-prompt-page.ejs
+++ b/views/validator-prompt-page.ejs
@@ -60,7 +60,7 @@
                                 <%= __('Thank you for validating!') %>
                             </label>
                             <p>
-                                <%- __('You have helped us validate <span id="spn-validation-count" class="font-wt-900"></span> recordings') %>
+                                <%- __('Thank you for validating  <span id="spn-validation-count" class="font-wt-900"></span> recordings') %>
                             </p>
                             <div class="row justify-content-center mb-3 mx-2">
                                 <div class="col-lg-4 col-md-4 col-sm-10 oflow-x-hid"></div><a class="btn btn-primary h6 shadow rounded mt-4 p-3 my-lg-5 col-lg-4 col-md-4 col-sm-10" href="/validator-page">
