--- a/assets/css/thank-you.css
+++ b/assets/css/thank-you.css
@@ -1,5 +1,4 @@
 .bg-thank-you {
-  background: url(/img/bg-thank-you.svg) no-repeat;
   background-size: cover;
 }
 #graphcontainer {
@@ -217,4 +216,40 @@
   100% {
     transform: rotate(360deg);
   }
+}
+
+.contribuion-info, .stats-container {
+  border-radius: 34px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.champion-ribbon {
+  position: absolute;
+    transform: rotate(-45deg);
+    top: 40px;
+    left: -56px;
+    width: 240px;
+    background: linear-gradient(49.38deg, #007BFF -227.24%, #89D6E3 169.12%);
+    padding: 1rem;
+    font-size: 14px;
+    color: #fff;
+}
+
+.w-80 {
+  width: 80%;
+}
+
+.time {
+  position: absolute;
+  right: -40px;
+  top: -1px;
+  font-size: 12px;
+}
+
+.time-contributed {
+  background-color: #FCC232;
+}
+
+.time-validated {
+  background-color: #83E661;
 }
