|Priyanshu| update content of about-us page for primary 12 languages

--- a/views/about-us.ejs
+++ b/views/about-us.ejs
@@ -74,7 +74,7 @@
                         <%= __('Crowd Sourcing & your contribution') %>
                     </p>
                     <p class="lead lh-7 mt-5 font-weight-normal-sm">
-                        <%= __('Speech recognition relies on \"machine-learning\" technology that requires huge collections of datasets that include diversified Indian voices and the corresponding text. Through Vakyansh, EkStep wants to create a diverse open repository of Indian voice speaking Indian language which can be used for this initiative.') %> <br><br>
+                        <%= __('Speech recognition relies on "machine-learning" technology that requires huge collections of datasets that include diversified Indian voices and the corresponding text. Through Vakyansh, we want to create a diverse open repository of Indian voice speaking Indian language which can be used for this initiative') %> <br><br>
                             <%= __('This is where you come in.') %><br><br>
                                 <%= __('As a team, we are inviting you to join us and contribute your voice to this initiative. Recording your voice at one stretch might be overwhelming and hence, we have created leaner measures on our website, for you to visit us multiple times and commence from where you left us off.') %> <br><br>
                                     <%= __('Every minute of your contribution will make a huge difference and bring us closer to our objective.') %>
