|Ramu| Add feedback form

--- a/views/common/footer.ejs
+++ b/views/common/footer.ejs
@@ -5,15 +5,26 @@
                 <p class="text-muted">Supported by EkStep Foundation (built on <a href="https://sunbird.org/ai">sunbird.org/ai</a>)</p>
             </div>
             <div class="d-lg-inline-flex justify-content-around mb-2">
-                <div class="p-2"><a href="/about-us">
+                <div class="p-2">
+                    <a href="/about-us">
                         <%= __('About Us') %>
-                    </a></div>
-                <div class="p-2"><a href="/terms-and-conditions">
+                    </a>
+                </div>
+                <div class="p-2">
+                    <a href="/terms-and-conditions">
                         <%= __('Terms & Conditions') %>
-                    </a></div>
-                <div class="p-2"><a href="/terms-and-conditions#privacy-policy">
+                    </a>
+                </div>
+                <div class="p-2">
+                    <a href="/terms-and-conditions#privacy-policy">
                         <%= __('Privacy Policy') %>
-                    </a></div>
+                    </a>
+                </div>
+                <div class="p-2">
+                    <a href="/feedback">
+                        <%= __('Feedback') %>
+                    </a>
+                </div>
             </div>
         </div>
     </div>
