|Ramu| Change gender options in speaker details

--- a/views/feedback.ejs
+++ b/views/feedback.ejs
@@ -54,8 +54,8 @@
             <div id="feedback_thank_you_screen" class="d-none">
                 <div class="row">
                     <div class="col-sm-6 offset-sm-3 d-flex flex-column align-items-center text-center">
-                        <h2 class="font-wt-900 mb-5">Thank You for you valueable feedback</h2>
-                        <p class="mb-5">Your feedback helps us keep the portal relevant to you, we appreciate you taking time to leave feedback for us.</p>
+                        <h2 class="font-wt-900 mb-5">Thank You for your valueable feedback</h2>
+                        <p class="mb-5">Your feedback helps us to keep the portal relevant to you, we appreciate you taking time to leave feedback for us.</p>
                         <a role="button" href="/" class="btn btn-outline-primary d-flex justify-content-center align-items-center w-75 mt-3" id="submit_btn">Back to Home</a>
                     </div>
                 </div>
