--- a/views/record.ejs
+++ b/views/record.ejs
@@ -17,6 +17,7 @@
 <div id="loader" class="overlay__content"><span class="spinner"></span></div>
 <div id="page-content" class="d-none">
     <div id="content-wrapper" class="container-fluid d-flex flex-column pt-1 pb-1">
+        <%- include modals/recording-instructions.ejs %>
         <div class="test-mic-speakers-container">
             <div class="col-12 col-sm-7 col-md-5 col-lg-3 test-mic-speaker px-5 px-md-0 px-lg-0" id="test-mic-speakers">
                 <button class="w-100 btn align-items-center d-flex justify-content-center" id="test-mic-speakers-button">
@@ -84,7 +85,7 @@
                 </div>
             </div>
         </div>
-        <div>
+        <div class="xs-p-16">
             <div class="row justify-content-center my-5">
                 <div class="col-md-8 col-sm-10 text-center prompt"><label class="h1 font-weight-normal" id="sentenceLbl"></label></div>
             </div>
@@ -145,7 +146,7 @@
             </div>
         </div>
     </div>
-</div> <%- include common/footer.ejs %> <%- include modals/recording-instructions.ejs %>
+</div> <%- include common/footer.ejs %>
 <div class="modal fade" id="errorModal" tabindex="-1" role="dialog" aria-labelledby="errorModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
