|Ramu| Add transaltions for instructions

--- a/views/modals/recording-instructions.ejs
+++ b/views/modals/recording-instructions.ejs
@@ -10,28 +10,28 @@
                 <path d="M5.30492 5.57512C5.61417 5.98316 4.9481 6.34319 4.63885 5.98316C4.06793 5.21508 3.47323 4.399 2.85473 3.58292C2.59306 3.17488 3.25913 2.76683 3.5208 3.17488C4.1393 3.94295 4.71022 4.75903 5.30492 5.57512Z" fill="#F7F7F7"/>
                 <path d="M3.28278 9.9431C3.78234 9.9911 3.78234 10.8072 3.28278 10.7112C2.28368 10.6392 1.30836 10.4952 0.356824 10.3991C-0.118941 10.3511 -0.118941 9.58306 0.356824 9.63106C1.35593 9.72707 2.28368 9.82308 3.28278 9.9431Z" fill="#F7F7F7"/>
                 </svg>
-            <span class="quick-tips-text mt-2">Quick Tips</span>            
+            <span class="quick-tips-text mt-2"><%= __('Quick Tips') %></span>            
         </div>
         <div class="instructions d-flex flex-grow-1 justify-content-around">
             <div class="d-flex flex-column instruction-box first">
                 <i class="material-icons instruction-icon rounded-circle instruction-icon-border">settings_voice</i>
-                <span class="text-center mt-2">Please test your Microphone</span>            
+                <span class="text-center mt-2"><%- __('Please test your <b>Microphone</b>') %></span>            
             </div>          
             <div class="d-flex flex-column instruction-box second">
                 <i class="material-icons instruction-icon rounded-circle instruction-icon-border">speaker</i>
-                <span class="text-center mt-2">Please test your Speakers</span>            
+                <span class="text-center mt-2"><%- __('Please test your <b>Speakers</b>') %></span>            
             </div>          
             <div class="d-flex flex-column instruction-box third">
                 <i class="material-icons instruction-icon rounded-circle instruction-icon-border">equalizer</i>
-                <span class="text-center mt-2">Ensure there is no background noise</span>            
+                <span class="text-center mt-2"><%- __('Ensure there is <b>no background noise</b>') %></span>            
             </div>          
             <div class="d-flex flex-column instruction-box fourth">
                 <i class="material-icons instruction-icon rounded-circle instruction-icon-border">record_voice_over</i>
-                <span class="text-center mt-2">Read once before recording it</span>            
+                <span class="text-center mt-2"><%- __('Read once <b>before recording it</b>') %></span>            
             </div>          
             <div class="d-flex flex-column instruction-box last">
                 <i class="material-icons instruction-icon rounded-circle instruction-icon-border">play_circle_filled</i>
-                <span class="text-center mt-2">Get started by clicking on Record button</span>            
+                <span class="text-center mt-2"><%- __('Get started by clicking on <b>Record</b> button') %></span>            
             </div>
         </div>  
         <div>
