|Priyanshu + Raunak | changed sample audio file for speaker test

--- a/views/record.ejs
+++ b/views/record.ejs
@@ -64,7 +64,7 @@
                     <div class="col-lg-5 col-md-10 px-0 mt-2 mt-lg-0">
                         <div class="row justify-content-center">
                             <audio controls="controls" id="test-speaker-hidden" style="display:none">
-                                <source src="aud/sample_audio1.wav">
+                                <source src="aud/sample_audio_file.mp3">
                             </audio>
                             <div class="col-lg-5 col-8 col-md-5 col-sm-5 mb-2 mb-lg-0">
                                 <button id="play-speaker" data-value="test-speaker" class="test-btn">
