|Priyanshu| heading 'Winning back our languages....ecosystem' will be replaced with 'Help your own language' on about-us page

--- a/views/about-us.ejs
+++ b/views/about-us.ejs
@@ -56,7 +56,7 @@
                 <div class="col-10 col-lg-4 text-center p-5 align-self-center"><img src="img/about-us-1.svg" alt="Speaker Diversity" class="img-fluid"></div>
                 <div class="col-10 col-lg-6 text-left pb-5">
                     <p class="h1 font-wt-900 lh-5">
-                        <%= __('Winning back our languages by introducing localization in our ecosystem') %>
+                        <%= __('Help your own language') %>
                     </p>
                     <p class="lead lh-7 mt-5 font-weight-normal-sm">
                         <%= __('There is a felt need for a speech recognition technology that specializes in Indian languages, that meets a high accuracy bar and is closer to the daily language and communication functions of users of diverse Indian languages.') %> <br><br>
