|Priyanshu | changed alignment of validator page

--- a/assets/css/validator-prompt.css
+++ b/assets/css/validator-prompt.css
@@ -11,6 +11,15 @@ a{
     height: 5rem;
 }
 
+@media (min-width: 992px) {
+    .validation-container {
+        min-height: 250px;
+    }
+    .prompt{
+        min-height: 120px;
+    }
+}
+
 @media (min-width: 1000px) {
     .dropdown-menu{
         right:0;
