--- a/views/validator-prompt-page.ejs
+++ b/views/validator-prompt-page.ejs
@@ -21,7 +21,7 @@
     <%- include common/headerForContributor.ejs %>
         <div id="validator-page-content">
             <div class="container-fluid pt-1 pb-1">
-                <div id="content-wrapper" class="d-flex flex-column justify-content-between">
+                <div id="content-wrapper" class="d-flex flex-column justify-content-center">
                     <div class="row justify-content-center" id="instructions-row">
                         <div id="instructions-link" class="d-flex justify-content-end align-items-center d-none"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#007BFF" style="cursor:pointer" class="bi bi-info-circle-fill d-none" viewBox="0 0 16 16">
                                 <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412l-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2z"/>
@@ -30,13 +30,15 @@
                             </span></div>
                     </div>
                     <div class="row justify-content-center mb-5 mb-lg-0" id="sentences-row">
-                        <div class="col-md-8 col-sm-10 text-center"><label class="h1 font-weight-normal" id="sentenceLabel"></label></div>
+                        <div class="col-md-8 col-sm-10 text-center prompt"><label class="h1 font-weight-normal" id="sentenceLabel"></label></div>
                     </div>
+                    <div class="validation-container">
                     <div class="row justify-content-center mx-2 d-none" id="loader-audio-row">
                         <div><span class="spinner w-h-5"></span></div>
                     </div>
                     <div class="row justify-content-center mx-2" id="audio-row">
                         <div class="col-lg-6 col-md-6 col-sm-12 justify-content-center"><audio id="my-audio" controls tabindex="-1" src="" type="audio/wav" class="d-none" crossorigin="anonymous"></audio><canvas id="myCanvas" class="w-100" height="80px"></canvas></div>
+                    </div>
                     </div>
                     <div class="row justify-content-center mb-5 mb-lg-0 mt-lg-5 d-none" id="no-sentences-row">
                         <div class="col-md-8 col-sm-10 text-center"><label class="h1 font-weight-bold">
@@ -99,23 +101,25 @@
                                 </svg></button>
                         </div>
                     </div>
-                </div>
-                <div class="row justify-content-center" id="skip_btn_row"><button class="btn text-primary mt-2 mb-2" id="skip_button">
-                        <%= __('Skip') %>
-                    </button></div>
-                <div class="row justify-content-center mb-3 mt-lg-5 mt-md-5 mt-sm-1" id="progress-row">
-                    <div class="col-12 col-sm-8 col-lg-7">
-                        <div class="progress mt-1">
-                            <div class="progress-bar progress-bar-striped progress-bar-animated" id="progress_bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="10" style="width:.5%"></div>
+                    <div class="row justify-content-center" id="skip_btn_row"><button class="btn text-primary mt-2 mb-2" id="skip_button">
+                            <%= __('Skip') %>
+                        </button></div>
+                    <div class="row justify-content-center mb-3 mt-lg-5 mt-md-5 mt-sm-1" id="progress-row">
+                        <div class="col-12 col-sm-8 col-lg-7">
+                            <div class="progress mt-1">
+                                <div class="progress-bar progress-bar-striped progress-bar-animated" id="progress_bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="10" style="width:.5%"></div>
+                            </div>
+                            <div class="mt-4 text-muted h-1r d-none" id="get-started">
+                                <%= __('Let\'s get started!') %>
+                            </div>
                         </div>
-                        <div class="mt-4 text-muted h-1r d-none" id="get-started">
-                            <%= __('Let\'s get started!') %>
+                        <div class="px-3">
+                            <div class="row justify-content-center"><span class="" id="currentSentenceLbl"></span><span class="">/</span><span class="" id="totalSentencesLbl"></span></div>
                         </div>
                     </div>
-                    <div class="px-3">
-                        <div class="row justify-content-center"><span class="" id="currentSentenceLbl"></span><span class="">/</span><span class="" id="totalSentencesLbl"></span></div>
-                    </div>
+
                 </div>
+
                 <%- include modals/validator-instructions.ejs %>
                     <%- include common/footer.ejs %>
                         <script src="https://cdn.jsdelivr.net/gh/mattdiamond/Recorderjs@08e7abd99739be6946f19f6806ccb368138f2dd3/dist/recorder.js"></script>
